Refactor: 공과금 조회 로직 개선 및 최신 6주 데이터 기반 처리
- PaymentRepository에 findAllByContractIdAndFeeTypeOrderByMonthDescWeekDesc 메서드 추가
- retrieveUtility 로직 리팩토링: 6주 기준 데이터 처리 및 빈 데이터 처리 추가
- WeekPaymentDTO에 amount 필드 추가 및 관련 처리 로직 수정
- CustomGasProvider의 가스 가격(CUSTOM_GAS_PRICE) 상향 조정 (100 GWei -> 500 GWei)
- UtilityBatchService에서 결제 완료 상태 확인 로직 추가